--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,327 @@
-/* CSS3 STYLE GENERIC */
-.view {
-   width: 300px;
-   height: 200px;
-   margin: 10px;
-   float: left;
-   border: 5px solid #fff;
-   overflow: hidden;
-   position: relative;
-   text-align: center;
-   box-shadow: 0px 0px 5px #aaa;
-   cursor: default;
+/*
+animation code from here: https://stackoverflow.com/questions/34762009/pulsing-heart-css-animation
+*/
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1.5);
+  }
+  20% {
+    transform: scale(2);
+  }
+  40% {
+    transform: scale(1.5);
+  }
+  60% {
+    transform: scale(2);
+  }
+  80% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1.5);
+  }
 }
-.view .mask, .view .content {
-   width: 300px;
-   height: 200px;
-   position: absolute;
-   overflow: hidden;
-   top: 0;
-   left: 0;
+
+.heart {
+  position: relative;
+  top: 32%;
+  left: 38%;
+  width: 100px;
+  height: 90px;
+  animation: heartbeat 2s infinite;
+  z-index: 100;
 }
-.view img {
-   display: block;
-   position: relative;
+
+.heart:before,
+.heart:after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 70%;
+  width: 50px;
+  height: 80px;
+  background: rgb(239, 235, 196);
+  -moz-border-radius: 50px 50px 0 0;
+  border-radius: 50px 50px 0 0;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0 100%;
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  -o-transform-origin: 0 100%;
+  transform-origin: 0 100%;
 }
-.view a.info {
-   background:url(../img/link.png) center no-repeat;
-   display: inline-block;
-   text-decoration: none;
-   padding:0;
-   text-indent:-9999px;
-   width:20px;
-   height:20px;
+
+.heart:after {
+  left: 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  -o-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+}
+
+.outer {
+  position: relative;
+  margin: auto;
+  display: block;
+  margin-top: 4%;
+  margin-bottom: 1%;
+  width: 800px;
+  height: 550px;
+}
+
+.frame-backside {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 251, 244);
+  z-index: 5;
+}
+
+.frame {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 96%;
+  height: 95%;
+  border: 20px solid rgb(255, 254, 252);
+  background-color: transparent;
+  box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.3),
+    inset -2px -2px 5px rgba(0, 0, 0, 0.4);
+  z-index: 100;
+}
+
+.headphones {
+  position: absolute;
+  top: 10%;
+  left: 32%;
+  width: 55%;
+  height: 70%;
+  z-index: 55;
+}
+
+.headband-box {
+  position: absolute;
+  top: -30%;
+  left: 0%;
+  width: 100%;
+  height: 80%;
+  overflow: hidden;
+  z-index: 5;
+}
+
+.headband {
+  position: absolute;
+  top: 40%;
+  left: 5%;
+  width: 90%;
+  height: 120%;
+  border-radius: 50%;
+  background: rgb(71, 45, 45);
+}
+
+.headband-cover {
+  position: absolute;
+  top: 44%;
+  left: 6%;
+  width: 88%;
+  height: 120%;
+  border-radius: 50%;
+  z-index: 1;
+  background: rgb(255, 251, 244);
+}
+
+.headband-box2 {
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  width: 100%;
+  height: 42%;
+  overflow: hidden;
+}
+
+.headband2 {
+  position: absolute;
+  top: -200%;
+  left: 5.2%;
+  width: 89.6%;
+  height: 400%;
+  border-radius: 50%;
+  background: rgb(193, 193, 193);
+}
+
+.headband-cover2 {
+  position: absolute;
+  top: -200%;
+  left: 6.1%;
+  width: 87.8%;
+  height: 400%;
+  border-radius: 50%;
+  z-index: 1;
+  background-color: rgb(255, 251, 244);
+}
+
+.clock-brown1 {
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  width: 7%;
+  height: 40%;
+  border-top-right-radius: 25%;
+  border-top-left-radius: 5%;
+  border-bottom-right-radius: 25%;
+  border-bottom-left-radius: 5%;
+  background: radial-gradient(rgb(132, 116, 116), rgb(53, 21, 21));
+  transform: rotate(-10deg);
+  z-index: 50;
+}
+
+.clock-beige1 {
+  position: absolute;
+  top: 51%;
+  left: 8.5%;
+  height: 0;
+  border-top: 79px solid transparent;
+  border-right: 20px solid rgb(229, 225, 188);
+  border-bottom: 79px solid transparent;
+  transform: rotate(-10deg);
+  z-index: 10;
+}
+
+.clock-detail1 {
+  position: absolute;
+  top: 51%;
+  left: 13.1%;
+  width: 2%;
+  height: 40%;
+  background: linear-gradient(
+    to bottom,
+    rgb(237, 230, 175) 0%,
+    rgb(255, 253, 242) 50%,
+    rgb(237, 230, 175) 100%
+  );
+  transform: rotate(-10deg);
+  z-index: 10;
+}
+
+.knob-outside1 {
+  position: absolute;
+  top: 69.8%;
+  left: 5.7%;
+  width: 1.2%;
+  height: 5%;
+  background: rgb(0, 0, 0);
+  transform: rotate(-10deg);
+  z-index: 20;
+}
+
+.knob-inside1 {
+  position: absolute;
+  top: 69.5%;
+  left: 7.5%;
+  width: 1.2%;
+  height: 5%;
+  background: rgb(0, 0, 0);
+  transform: rotate(-10deg);
+  z-index: 20;
+}
+
+.clock-brown2 {
+  position: absolute;
+  top: 50%;
+  right: 15%;
+  width: 7%;
+  height: 40%;
+  border-top-right-radius: 5%;
+  border-top-left-radius: 25%;
+  border-bottom-right-radius: 5%;
+  border-bottom-left-radius: 25%;
+  background: radial-gradient(rgb(132, 116, 116), rgb(53, 21, 21));
+  transform: rotate(10deg);
+  z-index: 50;
+}
+
+.clock-beige2 {
+  position: absolute;
+  top: 51%;
+  right: 8.5%;
+  height: 0;
+  border-top: 79px solid transparent;
+  border-right: 20px solid rgb(229, 225, 188);
+  border-bottom: 79px solid transparent;
+  transform: rotate(190deg);
+  z-index: 10;
+}
+
+.clock-detail2 {
+  position: absolute;
+  top: 51%;
+  right: 13.1%;
+  width: 2%;
+  height: 40%;
+  background: linear-gradient(
+    to bottom,
+    rgb(237, 230, 175) 0%,
+    rgb(255, 253, 242) 50%,
+    rgb(237, 230, 175) 100%
+  );
+  transform: rotate(10deg);
+  z-index: 10;
+}
+
+.knob-outside2 {
+  position: absolute;
+  top: 69.8%;
+  right: 5.7%;
+  width: 1.2%;
+  height: 5%;
+  background: rgb(0, 0, 0);
+  transform: rotate(10deg);
+  z-index: 20;
+}
+
+.knob-inside2 {
+  position: absolute;
+  top: 69.5%;
+  right: 7.5%;
+  width: 1.2%;
+  height: 5%;
+  background: rgb(0, 0, 0);
+  transform: rotate(10deg);
+  z-index: 20;
+}
+
+.cord-end {
+  position: absolute;
+  top: 90.8%;
+  left: 16.1%;
+  width: 2%;
+  height: 3%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  background: rgb(0, 0, 0);
+  transform: rotate(-10deg);
+  z-index: 20;
+}
+
+.svg-cord {
+  position: absolute;
+  top: 60%;
+  left: 1%;
+  width: 50%;
+  height: 30%;
+  z-index: 50;
+  /* border: 1px solid gray; */
 }
